@@ -15,6 +15,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Fixed mapObj.zoomScale() and mapobj.zoomRectangle() scaling problem in
+  Mapscript (#3131)
+
 - Few more fixes for high res output (#3157)
 
 - Allow "DRIVER 'TEMPLATE'" or "DRIVER TEMPLATE" in output formats
